--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     env:
       fb_tok: ${{secrets.fb_tok}}
@@ -21,14 +21,19 @@ jobs:
     - name: Checkout do repositório
       uses: actions/checkout@v3
 
+    - name: Set up Chocolatey
+      run: |
+        Set-ExecutionPolicy Bypass -Scope Process -Force;
+        [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072;
+        iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
+    - name: Install ImageMagick
+      run: choco install imagemagick --version=7.0.11-13 -y
+
     - name: Configurar Python
       uses: actions/setup-python@v3
       with:
         python-version: 3.11.9
   
-    - name: image magick 
-      run: convert -version
-
     - name: Instalar httx
       run: python -m pip install httpx
 
